--- a/src/app/viaje-detalle/viaje-detalle.component.html
+++ b/src/app/viaje-detalle/viaje-detalle.component.html
@@ -5,6 +5,7 @@
     <app-viaje-linea-detalle appHighlight [color]="'blue'" [clave]="'Tipo de viaje:  '" [valor]="viaje.tipoViaje"></app-viaje-linea-detalle>
     <app-viaje-linea-detalle appHighlight [clave]="'Destino de viaje: '" [valor]="viaje.destinoViaje"></app-viaje-linea-detalle>
     <app-viaje-linea-detalle appHighlight [clave]="'Duracion de viaje: '" [valor]="viaje.duracionViaje ? viaje.duracionViaje + ' días' : ''"></app-viaje-linea-detalle>
+    <app-viaje-linea-detalle appResaltarEstado [estado]="viaje.estado"[clave]="'Estado'" [valor]="viaje.estado"></app-viaje-linea-detalle>
     <button (click)="ocultarViaje()">Ocultar viaje</button>
     <button (click)="monstrarViajeClick()">Mostrar Info</button>
     <button (dblclick)="mostrarDuracionDobleClick()">Mostrar duracion</button>
