--- a/src/app/viaje-detalle/viaje-detalle.component.html
+++ b/src/app/viaje-detalle/viaje-detalle.component.html
@@ -1,11 +1,13 @@
 <div class="container" >
     <div [appHighlight]="'green'"><h1>{{viaje.nombreDelViaje}}</h1></div>
 
+    <input  type="text" [appSelectable]="opciones" (selectableChanged)="textChanged($event)">
+
     <!-- <app-viaje-linea-detalle [appHighlight]="'green'" [clave]="'Nombre del viaje: '" [valor]="viaje.nombreDelViaje"></app-viaje-linea-detalle> -->
     <app-viaje-linea-detalle appHighlight [color]="'blue'" [clave]="'Tipo de viaje:  '" [valor]="viaje.tipoViaje"></app-viaje-linea-detalle>
     <app-viaje-linea-detalle appHighlight [clave]="'Destino de viaje: '" [valor]="viaje.destinoViaje"></app-viaje-linea-detalle>
     <app-viaje-linea-detalle appHighlight [clave]="'Duracion de viaje: '" [valor]="viaje.duracionViaje ? viaje.duracionViaje + ' días' : ''"></app-viaje-linea-detalle>
-    <app-viaje-linea-detalle appResaltarEstado [estado]="viaje.estado"[clave]="'Estado'" [valor]="viaje.estado"></app-viaje-linea-detalle>
+    <app-viaje-linea-detalle appResaltarEstado [estado]="viaje.estado" [clave]="'Estado'" [valor]="ViajeEstado[viaje.estado]"></app-viaje-linea-detalle>
     <button (click)="ocultarViaje()">Ocultar viaje</button>
     <button (click)="monstrarViajeClick()">Mostrar Info</button>
     <button (dblclick)="mostrarDuracionDobleClick()">Mostrar duracion</button>
