--- a/src/app/viaje-detalle/viaje-linea-detalle/viaje-linea-detalle.component.html
+++ b/src/app/viaje-detalle/viaje-linea-detalle/viaje-linea-detalle.component.html
@@ -1,9 +1,8 @@
 <div> 
    <p>
-    <span  class="title">{{clave}}</span><span>{{valor}}</span>
+    <span  class="title">{{clave}}</span>
+    <span>{{valor}}</span>
    </p>
-        
-    
 </div>
 
                
